--- a/pom.xml
+++ b/pom.xml
@@ -84,14 +84,14 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>prepare-agent</goal>
+							<goal>mvn deploy</goal>
 						</goals>
 					</execution>
 					<execution>
 						<id>report</id>
 						<phase>test</phase>
 						<goals>
-							<goal>report</goal>
+							<goal>mvn deploy</goal>
 						</goals>
 					</execution>
 				</executions>
