--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 						<id>report</id>
 						<phase>test</phase>
 						<goals>
-							<goal>mvn deploy</goal>
+							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
